# magpie

./: .gitignore  LICENSE  README.md  TODO.md  package-lock.json  package.json  tsconfig.base.json  tsconfig.json
.claude/: PROJECT_CONTEXT.md
.github/workflows/: ci.yml  pages.yml  release.yml
conformance/: package.json  tsconfig.json  vitest.config.ts
conformance/src/: harness.ts
conformance/tests/: 00-harness.test.ts  01-query-response.test.ts  02-multi-turn-clarification.test.ts  03-two-party-only.test.ts  04-hangup-notifies-peer.test.ts  05-discovery-wrong-code.test.ts  06-rejoin-expired.test.ts  07-security-content-size.test.ts  08-security-extension-traversal.test.ts  09-security-fence-untrusted.test.ts  10-immediate-send-on-join.test.ts  11-resolve-and-report.test.ts  12-auto-attendant-e2e.test.ts  13-rust-relay-interop.test.ts
deploy/relay/: README.md  macbook.sh  setup.sh
docs/: COMPLIANCE.md  DESIGN.md  PROTOCOL.md
rust/: Cargo.toml  Dockerfile  fly.toml
rust/crates/magpie-cli/: Cargo.toml
rust/crates/magpie-cli/src/: cli.rs  commands.rs  env.rs  main.rs  reports.rs  runtime.rs
rust/crates/magpie-client/: Cargo.toml
rust/crates/magpie-client/src/: lib.rs  wire.rs
rust/crates/magpie-client/tests/: round_trip.rs
rust/crates/magpie-protocol/: Cargo.toml
rust/crates/magpie-protocol/src/: constants.rs  error.rs  invite.rs  lib.rs  pairing.rs  schema.rs
rust/crates/magpie-protocol/tests/: crypto_vectors.rs  validators.rs
rust/crates/magpie-relay/: Cargo.toml
rust/crates/magpie-relay/src/: frames.rs  main.rs  registry.rs
rust/crates/switchboard-cli/: Cargo.toml
rust/crates/switchboard-cli/src/: cli.rs  commands.rs  env.rs  main.rs  reports.rs  runtime.rs
rust/crates/switchboard-client/: Cargo.toml
rust/crates/switchboard-client/src/: lib.rs
rust/crates/switchboard-client/tests/: round_trip.rs
rust/crates/switchboard-protocol/: Cargo.toml
rust/crates/switchboard-protocol/src/: constants.rs  lib.rs  pairing.rs  schema.rs
rust/crates/switchboard-protocol/tests/: crypto_vectors.rs  validators.rs
rust/crates/switchboard-relay/: Cargo.toml
rust/crates/switchboard-relay/src/: frames.rs  main.rs  registry.rs
scripts/: install.ps1  install.sh
site/: index.html  relay.txt
specs/: RUST_MIGRATION.md  TEST_PLAN.md
specs/fixtures/: crypto-vectors.json
