[package]
name = "magpie-client"
version = "0.0.1"
edition.workspace = true
license.workspace = true
description = "Magpie client — a thin async WebSocket client to the relay plus the per-call pairing crypto. Mirror of packages/client (TS reference). The relay sees ciphertext only."

[dependencies]
magpie-protocol = { path = "../magpie-protocol" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
