[package]
name = "magpie-protocol"
version = "0.0.1"
edition.workspace = true
license.workspace = true
description = "Magpie protocol — HKDF-SHA256 rendezvous/channel derivation, AES-256-GCM seal/open, and the wire message schema + validators. Byte-identical to packages/protocol (TS reference)."

[dependencies]
hkdf = "0.12"
sha2 = "0.10"
aes-gcm = "0.10"
rand = "0.8"
hex = "0.4"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nanoid = "0.4"

[dev-dependencies]
serde_json = "1"
