[package]
name = "magpie-relay"
version = "0.0.1"
edition.workspace = true
license.workspace = true
description = "Magpie relay — pairs two endpoints at a rendezvous and brokers sealed ciphertext frames. Never unseals; crypto-free."

[[bin]]
name = "magpie-relay"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nanoid = "0.4"
